--- a/awesome-python-webapp/www/web_portal/templates/__base__.html
+++ b/awesome-python-webapp/www/web_portal/templates/__base__.html
@@ -40,8 +40,8 @@
                         </div>
                     </li>
                 {% else %}
-                    <li><a href="/signin"><i class="uk-icon-sign-in"></i> 登陆</a></li>
-                    <li><a href="/register"><i class="uk-icon-edit"></i> 注册</a></li>
+                    <li><a href="/api/signin"><i class="uk-icon-sign-in"></i> 登陆</a></li>
+                    <li><a href="api/register"><i class="uk-icon-edit"></i> 注册</a></li>
                 {% endif %}
                 </ul>
             </div>
