--- a/spring-boot/src/main/resources/templates/my.html
+++ b/spring-boot/src/main/resources/templates/my.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8"/>
+    <title>OAUTH2授权获取用户信息</title>
 </head>
 <body>
-xiaody
+<img th:src="${user.headimgurl}"/><br/>
+<label>昵称：</label><input th:value="${user.nickname}"/><br/>
+<label>性别：</label><input th:value="${user.sex}==1?男:女"/><br/>
+<label>国家：</label><input th:value="${user.country}"/><br/>
+<label>省份：</label><input th:value="${user.province}"/><br/>
+<label>城市：</label><input th:value="${user.city}"/><br/>
+<label>特权：</label><input th:value="${user.privilege}"/><br/>
+
 </body>
 </html>
